objects/NHM_Available_Space__c.object
<CustomObject>
    <fields>
        <fullName>NHM_AvailableSpaceID__c</fullName>
        <externalId>true</externalId>
        <label>NHM_AvailableSpaceID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_Available_Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_Available_Space</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.NHM_Office_Building__c</field>
                <operation>equals</operation>
                <valueField>NHM_Available_Space__c.NHM_Office_Building__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.NHM_Office_Floor__c</field>
                <operation>equals</operation>
                <valueField>NHM_Available_Space__c.NHM_Office_Floor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NHM_Available_Space__c</referenceTo>
        <relationshipLabel>NHM_Available_Spaces</relationshipLabel>
        <relationshipName>NHM_Available_Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHM_Office_Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_Office_Building</label>
        <referenceTo>NHM_Building__c</referenceTo>
        <relationshipLabel>NHM_Available_Spaces</relationshipLabel>
        <relationshipName>NHM_Available_Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHM_Office_Floor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_Office_Floor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.NHM_Office_Building__c</field>
                <operation>equals</operation>
                <valueField>NHM_Floor__c.NHMBuilding__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>NHM_Floor__c</referenceTo>
        <relationshipLabel>NHM_Available_Spaces</relationshipLabel>
        <relationshipName>NHM_Available_Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NHM_Available_Space</label>
    <nameField>
        <label>NHM_Available_Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NHM_Available_Spaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>